[gd_scene load_steps=6 format=3 uid="uid://dp6lpyc0e0pwb"]

[ext_resource type="Script" uid="uid://shmderq41s3e" path="res://scripts/scenario_manager.gd" id="1_0wfyh"]
[ext_resource type="Script" uid="uid://c1ewtg0cans6p" path="res://scripts/game_manager.gd" id="1_jyhfs"]
[ext_resource type="Script" uid="uid://bgrxc33my654b" path="res://scripts/message_window.gd" id="2_sugp2"]
[ext_resource type="Script" uid="uid://bhd4437vn0ftd" path="res://scripts/character_display.gd" id="2_tbgi4"]
[ext_resource type="Script" uid="uid://dvmnbbh0opl3p" path="res://scripts/command_registry.gd" id="5_registry"]

[node name="Node" type="Node"]
script = ExtResource("1_jyhfs")

[node name="Background" type="TextureRect" parent="."]
z_index = -1
offset_right = 40.0
offset_bottom = 40.0

[node name="CharacterDisplay" type="Node2D" parent="."]
script = ExtResource("2_tbgi4")

[node name="UI" type="CanvasLayer" parent="."]

[node name="MessageWindow" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_sugp2")

[node name="Panel" type="Panel" parent="UI/MessageWindow"]
custom_minimum_size = Vector2(3840, 600)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1520.0
offset_right = 3800.0
offset_bottom = 2120.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="UI/MessageWindow/Panel"]
layout_mode = 0
offset_left = 96.0
offset_top = 94.0
offset_right = 3096.0
offset_bottom = 598.0
pivot_offset = Vector2(50, 50)

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MessageWindow/Panel/MarginContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="UI/MessageWindow/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 48

[node name="TextLabel" type="RichTextLabel" parent="UI/MessageWindow/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(1000, 400)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 48
theme_override_font_sizes/bold_font_size = 48
theme_override_font_sizes/bold_italics_font_size = 48
theme_override_font_sizes/italics_font_size = 48
theme_override_font_sizes/mono_font_size = 48
bbcode_enabled = true
tab_size = 5

[node name="ScenarioManager" type="Node" parent="."]
script = ExtResource("1_0wfyh")

[node name="CommandRegistry" type="Node" parent="."]
script = ExtResource("5_registry")
